# placas_solares

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 009_add_validation_calibration_tables.py  010_add_dashboard_tables.py
backend/api/v1/: dashboard.py  dependencies.py  fv_detection.py  router.py  validation.py
backend/app/: main.py
backend/core/: arq_settings.py  arq_worker.py  celery_app.py  celery_beat.py  config.py  database.py  exceptions.py  logging.py  queue.py  redis.py  security.py
backend/domain/: balance_validator.py  climate.py  constants.py  energy_balance.py  entities.py  ml_model.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_energy_models.py  0003_batch_telemetry.py  0004_dashboard_indexes.py  0005_balance_confidence_column.py  0006_climate_records.py  0007_ml_tables.py
backend/models/: __init__.py  access_log.py  base.py  base_model.py  batch_job.py  calibration.py  climate_record.py  consumer_unit.py  dashboard.py  energy_anomaly.py  energy_inference.py  ml_model_record.py  ml_prediction.py  telemetry_reading.py  transformer.py  transformer_balance.py  user.py  validation.py
backend/repositories/: access_log_repository.py  base.py  batch_job_repository.py  calibration_repository.py  climate_repository.py  consumer_unit_repository.py  dashboard_repository.py  energy_anomaly_repository.py  energy_balance_repository.py  energy_inference_repository.py  ml_model_repository.py  telemetry_repository.py  transformer_balance_repository.py  transformer_repository.py  user_repository.py  validation_repository.py
backend/schemas/: batch_job.py  climate.py  common.py  consumer_unit.py  dashboard.py  energy_anomaly.py  energy_balance.py  energy_inference.py  fv_detection.py  ml.py  transformer.py  transformer_balance.py  user.py  validation.py
backend/services/: alert_service.py  climate_service.py  consumer_unit_service.py  dashboard_service.py  energy_balance_service.py  energy_inference_service.py  export_service.py  fv_detection_service.py  ml_service.py  transformer_service.py  user_service.py  validation_service.py
backend/services/climate/: climate_cache.py  inmet_client.py  (+2 more)
backend/tests/: conftest.py  test_fv_api.py  test_fv_detection.py  test_services.py
backend/workers/: anomaly_detector.py  celery_app.py  celery_beat_schedule.py  context.py  dashboard_worker.py  fv_worker.py  tasks.py  validation_worker.py
data_pipeline/datasets/: __init__.py  cvat_converter.py  tile_generator.py
docker/: Dockerfile.backend
docs/: ARCHITECTURE.md  ENVIRONMENT.md  ROADMAP_ATOS.md  SETUP_LOCAL.md  TESTING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
ml_engine/anomaly_detection/: __init__.py  anomaly_service.py  isolation_forest.py  one_class_svm.py
ml_engine/calibration/: __init__.py  kwp_calibrator.py  loss_calibrator.py
ml_engine/continuous_learning/: __init__.py  feedback_collector.py  model_updater.py
ml_engine/fv_detection/: __init__.py  detector.py  kwp_estimator.py  pixel_to_area.py  segmentation.py
ml_engine/generation_model/: predictor.py
ml_engine/pipeline/: inference_pipeline.py
scripts/: create_admin.py  create_admin_user.py
tests/: test_dashboard_service.py  test_inference_pipeline.py  test_validation.py
(+67 files in other folders)
