[tool.poetry]
name = "energy-inference-platform"
version = "0.1.0"
description = "Plataforma Enterprise de Inferência Energética para Redes de Distribuição"
authors = ["Energy Platform Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-multipart = "^0.0.9"
orjson = "^3.10.3"

sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"

redis = { extras = ["hiredis"], version = "^5.0.4" }
celery = { extras = ["redis"], version = "^5.4.0" }
flower = "^2.0.1"

structlog = "^24.2.0"
python-dotenv = "^1.0.1"

python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = "^4.1.3"

httpx = "^0.27.0"
aiohttp = "^3.9.5"
requests = "^2.32.3"

numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
pvlib = "^0.10.4"

geopandas = "^0.14.4"
shapely = "^2.0.4"
rasterio = "^1.3.10"
pyproj = "^3.6.1"

openpyxl = "^3.1.2"
xlrd = "^2.0.1"
python-dateutil = "^2.9.0"
email-validator = "^2.1.1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
faker = "^25.3.0"
factory-boy = "^3.3.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"